# macboost

./: .env.example  .gitignore  LICENSE  README.md  install.sh  pyproject.toml  tunnel-named.sh  tunnel.sh  uninstall.sh
docs/: README.md  git-identity.md  logging.md  mac-optimization.md
mac-optimizer/: com.user.mactmon.plist  mac-telegram-monitor.py  mac-telegram-monitor.sh
macboost/: __init__.py  bot.py  cli.py  collector.py  logger.py  web.py  webhook.py
