[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "macboost"
version = "0.1.0"
description = "Optimize & monitor old MacBooks via Telegram bot + local web dashboard"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ariska Hidayat", email = "ariska138@gmail.com" }]
keywords = ["macos", "optimization", "telegram", "monitoring", "macbook"]
dependencies = [
    "requests>=2.28.0",
    "flask>=2.3.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
macboost = "macboost.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["macboost*"]
